# financepype

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: assets.md  constants.md  data-loaders.md  markets.md  operations.md  operators.md  orders.md  owners.md  platforms.md  rules.md  secrets.md  simulations.md  transactions.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: assets.md  data-loaders.md  markets.md  operations.md  operators.md  owners.md  platforms.md  rules.md  secrets.md  simulations.md
documentation/source/: conf.py  index.rst
documentation/source/modules/: assets.rst  markets.rst  operations.rst  operators.rst  platforms.rst  rules.rst  secrets.rst  simulations.rst
financepype/: constants.py
financepype/assets/: asset.py  asset_id.py  blockchain.py  contract.py  factory.py  spot.py
financepype/markets/: candle.py  funding.py  market.py  position.py  trade.py  trading_pair.py
financepype/markets/orderbook/: __init__.py  models.py  tracker.py
financepype/operations/: fees.py  operation.py  tracker.py
financepype/operations/orders/: models.py  order.py  tracker.py
financepype/operations/transactions/: events.py  models.py  proposal.py  tracker.py  transaction.py
financepype/operators/: factory.py  nonce_creator.py  operator.py
financepype/operators/blockchains/: blockchain.py  identifier.py  models.py
financepype/operators/exchanges/: exchange.py  orderbook_exchange.py
financepype/owners/: account.py  factory.py  owner.py  owner_id.py  wallet.py
financepype/rules/: trading_rule.py  trading_rules_tracker.py
financepype/secrets/: aws.py  base.py  local.py
financepype/simulations/: __init__.py
financepype/simulations/balances/: __init__.py
scripts/: release.sh
tests/: conftest.py
tests/assets/: test_asset_id.py  test_factory.py
tests/markets/: test_candle.py  test_funding.py  test_market.py  test_position.py  test_trade.py  test_trading_pair.py
tests/markets/orderbook/: test_orderbook.py  test_orderbook_models.py
tests/operations/: test_fees.py  test_proposal.py  test_tracker.py
tests/operators/: test_factory.py  test_operator.py
tests/owners/: test_factory.py  test_owner.py  test_owner_id.py  test_wallet.py
tests/rules/: test_trading_rule.py
tests/secrets/: test_aws.py  test_base.py  test_local.py
(+38 files in other folders)
