[project]
name = "financepype"
version = "0.2.3"
description = "FinancePype is a Python library for trading on centralized and decentralized exchanges."
authors = [{ name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=2.12,<3",
    "cachetools>=4.2.2,<5",
    "types-cachetools>=4.2.10,<5",
    "boto3>=1.35.90,<2",
    "eventspype>=1.1.0,<2",
    "streamlit>=1.32.0,<2",
    "pandas>=2.2.1,<3",
    "bidict>=0.23.1,<1",
    "sortedcontainers>=2.4.0,<3",
    "chronopype>=0.7.3,<1",
]

[project.urls]
Homepage = "https://github.com/gianlucapagliara/financepype"
Documentation = "https://gianlucapagliara.github.io/financepype/"
Repository = "https://github.com/gianlucapagliara/financepype"
Issues = "https://github.com/gianlucapagliara/financepype/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "mypy>=1.7.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
